Fixed element z-index in desktop resolution in dine-app

--- a/dine-app/src/app/homepage/homepage.component.scss
+++ b/dine-app/src/app/homepage/homepage.component.scss
@@ -444,7 +444,7 @@
     .hero-container {
         margin-top: 0;
         width: 35vw;
-        height: 85%;
+        height: unset;
         align-items: flex-start;
         padding: 4rem 0 0 13.3vw;
     }
